Sonar Cleanups in FrankDoc Model package